--- a/audio-visualizer/package.json
+++ b/audio-visualizer/package.json
@@ -11,8 +11,11 @@
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.0.10",
     "autoprefixer": "^10.4.19",
+    "fft-js": "^0.0.12",
     "fft.js": "^4.0.4",
     "fluent-ffmpeg": "^2.1.3",
+    "nodeplotlib": "^1.1.2",
+    "p5": "^1.11.2",
     "postcss": "^8.4.38",
     "shiki": "^1.24.4",
     "shikiji": "^0.10.2",
