--- a/audio-visualizer/package.json
+++ b/audio-visualizer/package.json
@@ -22,6 +22,7 @@
     "shikiji-core": "^0.10.2",
     "solid-js": "^1.9.2",
     "tailwindcss": "^3.4.3",
+    "three": "^0.172.0",
     "vinxi": "^0.4.3",
     "ytdl-core": "^4.11.5"
   },
@@ -32,6 +33,7 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.27"
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/three": "^0.172.0"
   }
 }
